--- a/internal/components/discovery/testdata/icp-expected-resource-dump.yaml
+++ b/internal/components/discovery/testdata/icp-expected-resource-dump.yaml
@@ -1752,6 +1752,7 @@ metadata:
   name: istiod-cp-v113x
   namespace: istio-system
 spec:
+  replicas: 1
   selector:
     matchLabels:
       app: istiod
