--- a/internal/assets/manifests/istio-discovery/values.yaml
+++ b/internal/assets/manifests/istio-discovery/values.yaml
@@ -2,10 +2,11 @@
 
 ## Discovery Settings
 pilot:
-  autoscaleEnabled: true
-  autoscaleMin: 1
-  autoscaleMax: 5
-  replicaCount: 1
+  replicas:
+    count: 1
+    min: 1
+    max: 5
+    targetCPUUtilizationPercentage: 80
   deploymentStrategy:
     type: RollingUpdate
     rollingUpdate:
@@ -26,9 +27,6 @@ pilot:
       memory: 2048Mi
 
   env: []
-
-  cpu:
-    targetAverageUtilization: 80
 
   # if protocol sniffing is enabled for outbound
   enableProtocolSniffingForOutbound: true
