--- a/internal/components/discovery/testdata/icp-expected-values.yaml
+++ b/internal/components/discovery/testdata/icp-expected-values.yaml
@@ -149,10 +149,11 @@ pilot:
     operator: Equal
     tolerationSeconds: 5
     value: value1
-  autoscaleEnabled: true
-  autoscaleMax: 5
-  autoscaleMin: 1
-  replicaCount: 1
+  replicas:
+    count: 1
+    min: 1
+    max: 5
+    targetCPUUtilizationPercentage: 80
   podAnnotations:
     podannotation: podannotationvalue
   podLabels:
