--- a/internal/components/discovery/testdata/icp-test-cr.yaml
+++ b/internal/components/discovery/testdata/icp-test-cr.yaml
@@ -96,6 +96,7 @@ spec:
         count: 1
         min: 1
         max: 5
+        targetCPUUtilizationPercentage: 80
       podMetadata:
         annotations:
           podannotation: podannotationvalue
