--- a/deploy/charts/istio-operator/templates/operator-deployment.yaml
+++ b/deploy/charts/istio-operator/templates/operator-deployment.yaml
@@ -39,6 +39,7 @@ spec:
           - "--upstream=http://127.0.0.1:8080/"
           - "--logtostderr=true"
           - "--v=10"
+          - "--tls-cipher-suites=TLS_ECDHE_RSA_WITH_AES_256_GCM_SHA384,TLS_ECDHE_ECDSA_WITH_AES_128_GCM_SHA256,TLS_ECDHE_RSA_WITH_AES_128_GCM_SHA256,TLS_AES_256_GCM_SHA384,TLS_AES_128_GCM_SHA256"
         ports:
           - containerPort: 8443
             name: https
