workaround for istio 38217 issue https://github.com/istio/istio/issues/38217

--- a/internal/assets/manifests/istio-meshexpansion/templates/istio-meshexpansion-mgw.yaml
+++ b/internal/assets/manifests/istio-meshexpansion/templates/istio-meshexpansion-mgw.yaml
@@ -36,6 +36,13 @@ env:
   value: "true"
 {{- end }}
 {{- include "toYamlIf" (dict "value" .Values.deployment.env) }}
+volumes:
+- name: workload-volume
+  volumeSource:
+    emptyDir: {}
+volumeMounts:
+- mountPath: /var/run/secrets/workload-spiffe-uds
+  name: workload-volume
 {{- end }}
 
 apiVersion: servicemesh.cisco.com/v1alpha1
