--- a/internal/assets/manifests/istio-discovery/templates/mutatingwebhook.yaml
+++ b/internal/assets/manifests/istio-discovery/templates/mutatingwebhook.yaml
@@ -1,27 +1,35 @@
 {{- /* Core defines the common configuration used by all webhook segments */}}
+{{/* Copy just what we need to avoid expensive deepCopy */}}
+{{- $whv := dict
+ "revision" .Values.revision
+  "injectionPath" .Values.istiodRemote.injectionPath
+  "injectionURL" .Values.istiodRemote.injectionURL
+  "namespace" .Release.Namespace
+  "mode" .Values.global.mode }}
+{{- $istiodName := include "name-with-revision" ( dict "name" "istiod" "context" $) }}
+{{- $istioSidecarInjectorName := include "name-with-revision" ( dict "name" "istiod" "context" $) }}
 {{- define "core" }}
 {{- /* Kubernetes unfortunately requires a unique name for the webhook in some newer versions, so we assign
 a unique prefix to each. */}}
 - name: {{.Prefix}}sidecar-injector.istio.io
   clientConfig:
-    {{- if .Values.istiodRemote.injectionURL }}
-    url: "{{ .Values.istiodRemote.injectionURL }}"
+    {{- if .injectionURL }}
+    url: "{{ .injectionURL }}"
     {{- else }}
     service:
-{{- if eq .Values.global.mode "ACTIVE" }}
-      name: {{ include "name-with-revision" ( dict "name" "istiod" "context" $) }}
+{{- if eq .mode "ACTIVE" }}
+      name: {{ .istiodName }}
 {{- else }}
-      name: {{ include "name-with-revision" ( dict "name" "istio-sidecar-injector" "context" $) }}
+      name: {{ .istioSidecarInjectorName }}
 {{- end }}
-      namespace: {{ .Release.Namespace }}
-      {{- if .Values.istiodRemote.injectionURL }}
+      namespace: {{ .namespace }}
+      {{- if .injectionURL }}
       path: "/inject"
       {{- else }}
-      path: "{{ .Values.istiodRemote.injectionPath }}"
+      path: "{{ .injectionPath }}"
       {{- end }}
       port: 443
     {{- end }}
-    caBundle: ""
   sideEffects: None
   rules:
   - operations: [ "CREATE" ]
@@ -51,7 +59,7 @@ webhooks:
 
 {{- /* Case 1: namespace selector matches, and object doesn't disable */}}
 {{- /* Note: if both revision and legacy selector, we give precedence to the legacy one */}}
-{{- include "core" (mergeOverwrite (deepCopy .) (dict "Prefix" "rev.namespace.") ) }}
+{{- include "core" (mergeOverwrite (deepCopy $whv) (dict "Prefix" "rev.namespace.") ) }}
   namespaceSelector:
     matchExpressions:
     - key: istio.io/rev
@@ -68,7 +76,7 @@ webhooks:
       - "false"
 
 {{- /* Case 2: No namespace selector, but object selects our revision (and doesn't disable) */}}
-{{- include "core" (mergeOverwrite (deepCopy .) (dict "Prefix" "rev.object.") ) }}
+{{- include "core" (mergeOverwrite (deepCopy $whv) (dict "Prefix" "rev.object.") ) }}
   namespaceSelector:
     matchExpressions:
     - key: istio.io/rev
@@ -91,7 +99,7 @@ webhooks:
 {{- if (eq .Values.revision "") }}
 
 {{- /* Case 1: Namespace selector enabled, and object selector is not injected */}}
-{{- include "core" (mergeOverwrite (deepCopy .) (dict "Prefix" "namespace.") ) }}
+{{- include "core" (mergeOverwrite (deepCopy $whv) (dict "Prefix" "namespace.") ) }}
   namespaceSelector:
     matchExpressions:
     - key: istio-injection
@@ -106,7 +114,7 @@ webhooks:
       - "false"
 
 {{- /* Case 2: no namespace label, but object selector is enabled (and revision label is not, which has priority) */}}
-{{- include "core" (mergeOverwrite (deepCopy .) (dict "Prefix" "object.") ) }}
+{{- include "core" (mergeOverwrite (deepCopy $whv) (dict "Prefix" "object.") ) }}
   namespaceSelector:
     matchExpressions:
     - key: istio-injection
@@ -124,7 +132,7 @@ webhooks:
 
 {{- if .Values.sidecarInjectorWebhook.enableNamespacesByDefault }}
 {{- /* Special case 3: no labels at all */}}
-{{- include "core" (mergeOverwrite (deepCopy .) (dict "Prefix" "auto.") ) }}
+{{- include "core" (mergeOverwrite (deepCopy $whv) (dict "Prefix" "auto.") ) }}
   namespaceSelector:
     matchExpressions:
     - key: istio-injection
