--- a/internal/assets/manifests/base/templates/endpoints.yaml
+++ b/internal/assets/manifests/base/templates/endpoints.yaml
@@ -1,22 +1,13 @@
-{{- if .Values.global.remotePilotAddress }}
+{{- if regexMatch "^([0-9]*\\.){3}[0-9]*$" .Values.global.remotePilotAddress }}
+# if the remotePilotAddress is an IP addr
+apiVersion: v1
+kind: Endpoints
+metadata:
   {{- if not .Values.global.externalIstiod }}
-apiVersion: v1
-kind: Endpoints
-metadata:
   name: {{ include "name-with-revision" ( dict "name" "istiod-remote" "context" $) }}
-  namespace: {{ .Release.Namespace }}
-subsets:
-- addresses:
-  - ip: {{ .Values.global.remotePilotAddress }}
-  ports:
-  - port: 15012
-    name: tcp-istiod
-    protocol: TCP
-  {{- else if regexMatch "^([0-9]*\\.){3}[0-9]*$" .Values.global.remotePilotAddress }}
-apiVersion: v1
-kind: Endpoints
-metadata:
+  {{- else }}
   name: {{ include "name-with-revision" ( dict "name" "istiod" "context" $) }}
+  {{- end }}
   namespace: {{ .Release.Namespace }}
 subsets:
 - addresses:
@@ -25,6 +16,8 @@ subsets:
   - port: 15012
     name: tcp-istiod
     protocol: TCP
-  {{- end }}
+  - port: 15017
+    name: tcp-webhook
+    protocol: TCP
 ---
 {{- end }}
