--- a/internal/assets/manifests/base/templates/services.yaml
+++ b/internal/assets/manifests/base/templates/services.yaml
@@ -1,37 +1,28 @@
 {{- if .Values.global.remotePilotAddress }}
+apiVersion: v1
+kind: Service
+metadata:
   {{- if not .Values.global.externalIstiod }}
-# when istiod is enabled in remote cluster, we can't use istiod service name
-apiVersion: v1
-kind: Service
-metadata:
+  # when local istiod is enabled, we can't use istiod service name to reach the remote control plane
   name: {{ include "name-with-revision" ( dict "name" "istiod-remote" "context" $) }}
-  namespace: {{ .Release.Namespace }}
-spec:
-  ports:
-  - port: 15012
-    name: tcp-istiod
-    protocol: TCP
-  clusterIP: None
   {{- else }}
-# when istiod isn't enabled in remote cluster, we can use istiod service name
-apiVersion: v1
-kind: Service
-metadata:
+  # when local istiod isn't enabled, we can use istiod service name to reach the remote control plane
   name: {{ include "name-with-revision" ( dict "name" "istiod" "context" $) }}
+  {{- end }}
   namespace: {{ .Release.Namespace }}
 spec:
   ports:
   - port: 15012
     name: tcp-istiod
     protocol: TCP
-  # if the remotePilotAddress is IP addr, we use clusterIP: None.
-  # else, we use externalName
-  {{- if regexMatch "^([0-9]*\\.){3}[0-9]*$" .Values.global.remotePilotAddress }}
-  clusterIP: None
-  {{- else }}
+  - port: 443
+    targetPort: 15017
+    name: tcp-webhook
+    protocol: TCP
+  {{- if not (regexMatch "^([0-9]*\\.){3}[0-9]*$" .Values.global.remotePilotAddress) }}
+  # if the remotePilotAddress is not an IP addr, we use ExternalName
   type: ExternalName
   externalName: {{ .Values.global.remotePilotAddress }}
-  {{- end }}
   {{- end }}
 ---
 {{- end }}
