--- a/internal/assets/manifests/istio-discovery/templates/autoscale.yaml
+++ b/internal/assets/manifests/istio-discovery/templates/autoscale.yaml
@@ -1,5 +1,9 @@
 {{- if and (eq .Values.global.mode "ACTIVE") .Values.pilot.autoscaleEnabled .Values.pilot.autoscaleMin .Values.pilot.autoscaleMax }}
-apiVersion: autoscaling/v2beta1
+{{- if (semverCompare ">=1.23-0" .Capabilities.KubeVersion.GitVersion)}}
+apiVersion: autoscaling/v2
+{{- else }}
+apiVersion: autoscaling/v2beta2
+{{- end }}
 kind: HorizontalPodAutoscaler
 metadata:
   name: {{ include "name-with-revision" ( dict "name" "istiod" "context" $) }}
@@ -19,6 +23,8 @@ spec:
   - type: Resource
     resource:
       name: cpu
-      targetAverageUtilization: {{ .Values.pilot.cpu.targetAverageUtilization }}
+      target:
+          type: Utilization
+          averageUtilization: {{ .Values.pilot.cpu.targetAverageUtilization }}
 ---
 {{- end }}
