--- a/internal/assets/manifests/istio-discovery/templates/istiod-injector-configmap.yaml
+++ b/internal/assets/manifests/istio-discovery/templates/istiod-injector-configmap.yaml
@@ -26,7 +26,7 @@ data:
     # defaultTemplates defines the default template to use for pods that do not explicitly specify a template
     {{- if .Values.sidecarInjectorWebhook.defaultTemplates }}
     defaultTemplates:
-{{- range .Values.sidecarInjectorWebhook.defaultTemplates}}
+{{- range .Values.sidecarInjectorWebhook.defaultTemplates }}
     - {{ . }}
 {{- end }}
     {{- else }}
@@ -41,7 +41,7 @@ data:
 {{ toYaml .Values.sidecarInjectorWebhook.neverInjectSelector | trim | indent 6 }}
     injectedAnnotations:
       {{- range $key, $val := .Values.sidecarInjectorWebhook.injectedAnnotations }}
-      "{{ $key }}": "{{ $val }}"
+      "{{ $key }}": {{ $val | quote }}
       {{- end }}
     {{- /* If someone ends up with this new template, but an older Istiod image, they will attempt to render this template
          which will fail with "Pod injection failed: template: inject:1: function "Istio_1_9_Required_Template_And_Version_Mismatched" not defined".
