--- a/internal/assets/manifests/istio-discovery/templates/poddisruptionbudget.yaml
+++ b/internal/assets/manifests/istio-discovery/templates/poddisruptionbudget.yaml
@@ -1,5 +1,9 @@
 {{- if and (eq .Values.global.mode "ACTIVE") .Values.global.defaultPodDisruptionBudget.enabled }}
+{{- if (semverCompare ">=1.21-0" .Capabilities.KubeVersion.GitVersion) }}
+apiVersion: policy/v1
+{{- else }}
 apiVersion: policy/v1beta1
+{{- end }}
 kind: PodDisruptionBudget
 metadata:
   name: {{ include "name-with-revision" ( dict "name" "istiod" "context" $) }}
