--- a/internal/assets/manifests/istio-meshgateway/templates/autoscale.yaml
+++ b/internal/assets/manifests/istio-meshgateway/templates/autoscale.yaml
@@ -1,6 +1,10 @@
 {{ $gateway := .Values.deployment }}
 {{- if and $gateway.replicas.min $gateway.replicas.max (gt ($gateway.replicas.min | int) 0) (gt ($gateway.replicas.max | int) ($gateway.replicas.min | int)) }}
-apiVersion: autoscaling/v2beta1
+{{- if (semverCompare ">=1.23-0" .Capabilities.KubeVersion.GitVersion) }}
+apiVersion: autoscaling/v2
+{{- else }}
+apiVersion: autoscaling/v2beta2
+{{- end }}
 kind: HorizontalPodAutoscaler
 metadata:
   name: {{ $gateway.name }}
@@ -18,6 +22,8 @@ spec:
     - type: Resource
       resource:
         name: cpu
-        targetAverageUtilization: {{ $gateway.replicas.targetCPUUtilizationPercentage }}
+        target:
+          type: Utilization
+          averageUtilization: {{ $gateway.cpu.targetAverageUtilization }}
 ---
 {{- end }}
