--- a/internal/assets/manifests/istio-meshexpansion/templates/istiod-expansion-gw.yaml
+++ b/internal/assets/manifests/istio-meshexpansion/templates/istiod-expansion-gw.yaml
@@ -12,7 +12,7 @@ spec:
     - port:
         name: tls-istiod
         number: 15012
-        protocol: tls
+        protocol: TLS
       tls:
         mode: PASSTHROUGH
       hosts:
@@ -22,7 +22,7 @@ spec:
     - port:
         name: tls-istiodwebhook
         number: 15017
-        protocol: tls
+        protocol: TLS
       tls:
         mode: PASSTHROUGH
       hosts:
