review fixes, bump istio version, bump policy api version

--- a/internal/components/discovery/testdata/icp-passive-expected-resource-dump.yaml
+++ b/internal/components/discovery/testdata/icp-passive-expected-resource-dump.yaml
@@ -1275,7 +1275,7 @@ data:
         "sts": {
           "servicePort": 0
         },
-        "tag": "1.15.0-beta.1",
+        "tag": "1.15.0-rc.0",
         "tracer": {
           "datadog": {
             "address": "$(HOST_IP):8126"
