--- a/config/rbac/role.yaml
+++ b/config/rbac/role.yaml
@@ -240,6 +240,15 @@ rules:
   - update
   - watch
 - apiGroups:
+  - gateway.networking.k8s.io
+  resources:
+  - gatewayclasses
+  verbs:
+  - create
+  - delete
+  - patch
+  - update
+- apiGroups:
   - multicluster.x-k8s.io
   resources:
   - serviceexports
