--- a/deploy/charts/istio-operator/Chart.yaml
+++ b/deploy/charts/istio-operator/Chart.yaml
@@ -12,4 +12,4 @@ icon: https://istio.io/latest/img/istio-whitelogo-bluebackground-framed.svg
 kubeVersion: ">= 1.22.0-0 < 1.26.0-0"
 
 version: 2.0.13
-appVersion: "v2.14.0"
+appVersion: "v2.14.0-rc.0"
