--- a/config/crd/bases/istio-operator-crds.gen.yaml
+++ b/config/crd/bases/istio-operator-crds.gen.yaml
@@ -6,7 +6,7 @@ metadata:
     "helm.sh/resource-policy": keep
   name: istiocontrolplanes.servicemesh.cisco.com
   labels:
-    resource.alpha.banzaicloud.io/revision: 1.15.0-rc.0
+    resource.alpha.banzaicloud.io/revision: 1.15.0
 spec:
   group: servicemesh.cisco.com
   names:
@@ -9033,7 +9033,7 @@ metadata:
     "helm.sh/resource-policy": keep
   name: peeristiocontrolplanes.servicemesh.cisco.com
   labels:
-    resource.alpha.banzaicloud.io/revision: 1.15.0-rc.0
+    resource.alpha.banzaicloud.io/revision: 1.15.0
 spec:
   group: servicemesh.cisco.com
   names:
@@ -18057,7 +18057,7 @@ metadata:
     "helm.sh/resource-policy": keep
   name: istiomeshes.servicemesh.cisco.com
   labels:
-    resource.alpha.banzaicloud.io/revision: 1.15.0-rc.0
+    resource.alpha.banzaicloud.io/revision: 1.15.0
 spec:
   group: servicemesh.cisco.com
   names:
@@ -19190,7 +19190,7 @@ metadata:
     "helm.sh/resource-policy": keep
   name: istiomeshgateways.servicemesh.cisco.com
   labels:
-    resource.alpha.banzaicloud.io/revision: 1.15.0-rc.0
+    resource.alpha.banzaicloud.io/revision: 1.15.0
 spec:
   group: servicemesh.cisco.com
   names:
