--- a/internal/assets/manifests/istio-discovery/values.yaml
+++ b/internal/assets/manifests/istio-discovery/values.yaml
@@ -252,7 +252,7 @@ global:
   # Dev builds from prow are on gcr.io
   hub: istio
   # Default tag for Istio images.
-  tag: "1.15.0-rc.0"
+  tag: "1.15.0"
 
   # Specify image pull policy if default behavior isn't desired.
   # Default behavior: latest images will be Always else IfNotPresent.
